--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -87,6 +87,23 @@ label {
   margin-bottom: 2em;
 }
 
+.svg-container {
+  position: relative;
+}
+
+.tooltip-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.tooltip-area {
+  flex-grow: 1;
+  transform: translateX(50%);
+}
+
 .heatmap {
   margin-top: 2rem;
   position: relative;
