--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -150,6 +150,9 @@ label {
 .heatmap-data td.heatmap-cell--ideal {
   background: #00d388;
 }
+.heatmap-data td.heatmap-cell--cheapest {
+  background: #f4ddd2;
+}
 .heatmap-data td.heatmap-cell--low {
   background: #b3ffba;
 }
@@ -299,26 +302,42 @@ rect {
 }
 
 .reference-table td {
-  padding: 0 1em;
   text-align: right;
   font-size: 16px;
   font-family: "Poppins", sans-serif;
+}
+.reference-table td,
+.reference-table th {
+  padding-left: 1em;
 }
 
 .reference-table th {
   text-transform: uppercase;
   font-size: 13px;
   font-family: "Rubik", sans-serif;
-  padding-bottom: 1em;
+  font-weight: 500;
+  padding-bottom: 0.5em;
+  text-align: right;
+  min-width: 100px;
+}
+.reference-table tbody td:nth-child(6),
+.reference-table tbody td:nth-child(7) {
+  background: #efefef;
 }
 
 .reference-table .ideal {
   background: linear-gradient(116.5deg, #67e5b8 0%, #50e1ad 100%);
   color: #38415b;
 }
+.reference-table tbody .ideal td {
+  background: transparent;
+}
 .reference-table .cheapest {
   background: linear-gradient(116.5deg, #f4ddd2 0%, #f0d0c2 100%);
   color: #38415b;
+}
+.reference-table tbody .cheapest td {
+  background: transparent;
 }
 
 footer {
