rename field to just yhteisövero and add a description

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -243,23 +243,23 @@ rect {
   flex-direction: column;
   align-items: flex-end;
 }
-
+.reference {
+  display: none;
+}
+@media (min-width: 800px) {
+  .reference {
+    display: block;
+  }
+}
 .reference-table {
   width: 100%;
-  display: none;
   margin-top: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   border-collapse: collapse;
   border-radius: 12px;
 }
 .reference-table--disabled {
   opacity: 0.5;
-}
-
-@media (min-width: 800px) {
-  .reference-table {
-    display: table;
-  }
 }
 
 .reference-table td {
