try to get rid of font flash on initial load

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,700|Rubik:500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,700|Rubik:500,700&display=block");
 
 html {
   font-family: "Poppins", sans-serif;
