--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -60,7 +60,6 @@ label {
 .input {
   display: flex;
   position: relative;
-  padding-right: 3em;
 }
 
 .number-input {
@@ -75,6 +74,7 @@ label {
   padding-top: 0;
   padding-bottom: 0;
   padding-right: 1em;
+  box-sizing: border-box;
 }
 .number-input:focus {
   outline: none;
