fix how divident over 8percent is calculated

--- a/src/components/Heatmap/Heatmap.css
+++ b/src/components/Heatmap/Heatmap.css
@@ -34,6 +34,16 @@
   align-items: center;
 }
 
+.heatmap-ratio {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 600ms;
+}
+.heatmap:hover .heatmap-ratio {
+  opacity: 1;
+}
+
 @keyframes appear {
   0% {
     opacity: 0;
